# src/main/java/com/example/thesis/requests/AssignAccountInputParams.java
@@ -1,6 +1,5 @@
 package com.example.thesis.requests;
 
-import com.example.thesis.entities.Account;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -12,7 +11,6 @@ import lombok.Setter;
 @NoArgsConstructor
 public class AssignAccountInputParams {
     private String type;
-    private Long employeeId;
-    private Long roleId;
-    private Account newAccount;
+    private Long id;
+    private AccountRequest newAccount;
 }
