# src/main/java/com/example/thesis/requests/DepartmentRequest.java
@@ -2,28 +2,19 @@ package com.example.thesis.requests;
 
 import lombok.AllArgsConstructor;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.Setter;
-
-import java.util.HashSet;
-import java.util.Set;
 
 @Getter
 @Setter
 @AllArgsConstructor
+@NoArgsConstructor
 public class DepartmentRequest {
-    private Long id;
-
-    private String location;
-
     private String name;
-
-    private Integer peopleNumber;
-
-    private String type;
 
     private String description;
 
-    private Long headOfUnitId;
+    private Long mangerOfUnitId;
 
-    private Set<DepartmentRequest> subUnits = new HashSet<>();
+    private Long headOfUnitId;
 }
