# src/main/java/com/example/thesis/responses/DepartmentResponse.java
@@ -16,5 +16,6 @@ public class DepartmentResponse {
     private Integer peopleNumber;
     private String description;
     private Long headOfUnitId;
+    private Long mangerOfUnitId;
     private Set<DepartmentResponse> subUnits;
 }
