# src/main/scripts/openapi3-api-docs.json
@@ -286,6 +286,35 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "department-controller"
+        ],
+        "operationId": "deleteDepartment",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/account/{id}": {
@@ -338,7 +367,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Account"
+                "$ref": "#/components/schemas/AccountRequest"
               }
             }
           },
@@ -536,7 +565,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Account"
+                "$ref": "#/components/schemas/AccountRequest"
               }
             }
           },
@@ -900,43 +929,30 @@
       "DepartmentRequest": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "location": {
-            "type": "string"
-          },
           "name": {
-            "type": "string"
-          },
-          "peopleNumber": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "type": {
             "type": "string"
           },
           "description": {
             "type": "string"
           },
-          "headOfUnitId": {
+          "mangerOfUnitId": {
             "type": "integer",
             "format": "int64"
           },
-          "subUnits": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/DepartmentRequest"
-            }
+          "headOfUnitId": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       },
-      "Account": {
+      "AccountRequest": {
         "type": "object",
         "properties": {
-          "id": {
+          "eid": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "roleid": {
             "type": "integer",
             "format": "int64"
           },
@@ -952,32 +968,6 @@
               "enable",
               "disable"
             ]
-          },
-          "enabled": {
-            "type": "boolean"
-          },
-          "authorities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GrantedAuthority"
-            }
-          },
-          "accountNonLocked": {
-            "type": "boolean"
-          },
-          "credentialsNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonExpired": {
-            "type": "boolean"
-          }
-        }
-      },
-      "GrantedAuthority": {
-        "type": "object",
-        "properties": {
-          "authority": {
-            "type": "string"
           }
         }
       },
